# xybrid

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  Package.swift  README.ja-JP.md  README.md  README.zh-CN.md  RELEASES.md  justfile  vercel.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-android.yml  build-apple.yml  build-flutter.yml  build-natives.yml  build-react-native.yml  build-unity.yml  ci-docs.yml  ci.yml  discord-notify.yml  gradle-wrapper-validation.yml  release-dryrun.yml  release-prep.yml  release-publish.yml  release.yml  scorecard.yml  test-candle.yml  test-ci.yml
bindings/apple/: README.md
bindings/flutter/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
bindings/kotlin/: .gitignore  README.md  build.gradle.kts
bindings/react-native/: .gitignore  .npmignore  README.md  package.json  react-native-xybrid.podspec  tsconfig.build.json  tsconfig.json
bindings/unity/: README.md  package.json
crates/llama-cpp-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
crates/llama-cpp-sys/src/: lib.rs
crates/xybrid/: Cargo.toml  README.md
crates/xybrid-bolt/: .gitignore  Cargo.toml  boltffi.toml
crates/xybrid-bolt/src/: lib.rs
crates/xybrid-cli/: Cargo.toml  README.md
crates/xybrid-cli/src/: main.rs
crates/xybrid-cli/src/commands/: init.rs  models.rs  repl.rs  run.rs
crates/xybrid-cli/src/commands/repl/: targeting.rs  warmup.rs
crates/xybrid-cli/tests/: vlm_cli_test.rs
crates/xybrid-core/: .gitignore  Cargo.toml  build.rs
crates/xybrid-core/benches/: raw_image_ingress.rs
crates/xybrid-core/examples/: asr_whisper.rs  authority_demo.rs  caps_dump.rs  gemma4_vision_caption.rs  local_llm_qwen.rs  local_llm_qwen35.rs  mnist_simple_mode.rs  mobilenetv2_imagenet.rs  resnet50_imagenet.rs  sentence_embedding.rs  streaming_llm.rs  tts_kitten.rs
crates/xybrid-core/src/: bundler.rs  cache_provider.rs  context.rs  error.rs  event_bus.rs  executor.rs  features.rs  lib.rs  orchestrator.rs  prelude.rs  tracing.rs
crates/xybrid-core/src/audio/: convert.rs  envelope.rs  format.rs  mod.rs  vad.rs
crates/xybrid-core/src/audio/mel/: mod.rs
crates/xybrid-core/src/cloud/: client.rs  config.rs  error.rs  mod.rs
crates/xybrid-core/src/cloud_llm/: mod.rs
crates/xybrid-core/src/device/: apple.rs  capabilities.rs  common.rs  mod.rs  platform_state.rs  tests.rs  types.rs  windows.rs
crates/xybrid-core/src/execution/: chat_template.rs  executor.rs  listener.rs  llm_telemetry.rs  mod.rs  path.rs  test_seams.rs  text_chunking.rs  types.rs  voice_loader.rs
crates/xybrid-core/src/execution/postprocessing/: audio.rs  mod.rs
crates/xybrid-core/src/execution/preprocessing/: audio.rs  image.rs  mod.rs  tensor.rs
crates/xybrid-core/src/execution/strategies/: codec_tts.rs  llm.rs  mod.rs  standard.rs
crates/xybrid-core/src/execution/template/: metadata.rs  mod.rs  steps.rs
crates/xybrid-core/src/http/: mod.rs  retry.rs
crates/xybrid-core/src/ir/: envelope.rs  mod.rs
crates/xybrid-core/src/orchestrator/: bootstrap.rs  policy_engine.rs
crates/xybrid-core/src/orchestrator/authority/: local.rs  mod.rs  remote.rs  types.rs
crates/xybrid-core/src/pipeline/: runner.rs  target.rs
crates/xybrid-core/src/preprocessing/: mel_spectrogram.rs
crates/xybrid-core/src/runtime_adapter/: llm.rs  metadata_driven.rs  mod.rs  streaming_postprocess.rs  tensor_utils.rs  types.rs  vision.rs
crates/xybrid-core/src/runtime_adapter/candle/: adapter.rs  device.rs  mod.rs  runtime.rs  whisper.rs
crates/xybrid-core/src/runtime_adapter/cloud/: mod.rs
crates/xybrid-core/src/runtime_adapter/coreml/: adapter.rs
crates/xybrid-core/src/runtime_adapter/llama_cpp/: chat.rs  mod.rs  sys.rs
crates/xybrid-core/src/runtime_adapter/mistral/: mod.rs
crates/xybrid-core/src/runtime_adapter/onnx/: adapter.rs  execution_provider.rs  mobile.rs  mod.rs  profiling.rs  session.rs
crates/xybrid-core/src/streaming/: mod.rs  session.rs
crates/xybrid-core/src/telemetry/: events.rs  session.rs
crates/xybrid-core/src/testing/: mocks.rs  mod.rs  model_fixtures.rs
crates/xybrid-core/src/tts/: mod.rs  voice_embedding.rs
crates/xybrid-core/tests/: llama_embeddings_smoke.rs  mobilenet_vision_parity.rs  multimodal_messages.rs  vision_envelope.rs  vision_metadata.rs  vlm_lfm2_smoke.rs
crates/xybrid-ffi/: Cargo.toml
crates/xybrid-ffi-facade/: Cargo.toml
crates/xybrid-ffi-facade/src/: lib.rs
crates/xybrid-llama/: Cargo.toml
crates/xybrid-llama/src/: context.rs  error.rs  ffi.rs  generation.rs  lib.rs  log_control.rs  model.rs  vision.rs
crates/xybrid-llama/tests/: prefix_cache_hit_smoke.rs  recurrent_gating_smoke.rs  wrapper_invariants.rs
crates/xybrid-sdk/: Cargo.toml  README.md
crates/xybrid-sdk/examples/: cloud_fallback_demo.rs
crates/xybrid-sdk/src/: lib.rs  llm.rs  metadata_gen.rs  model.rs  registry_client.rs  result.rs  run_options.rs  source.rs  stream.rs  telemetry.rs
crates/xybrid-sdk/src/cache/: cache_manager.rs  cache_provider.rs  mod.rs
crates/xybrid-sdk/src/pipeline/: mod.rs  result.rs
crates/xybrid-sdk/tests/: async_test.rs  cloud_fallback_e2e.rs  telemetry_integration.rs
crates/xybrid-uniffi/: Cargo.toml
crates/xybrid-uniffi/src/: lib.rs
docs/: FEATURE_MATRIX.md  INSTALLATION.md  package-lock.json  package.json  pnpm-lock.yaml
docs/sdk/: API_REFERENCE.md  api-surface.yaml  telemetry.md
examples/android/: README.md  build.gradle.kts  local.properties.example
examples/flutter/: README.md  pubspec.yaml
examples/ios/: README.md
integration-tests/: Cargo.toml
integration-tests/fixtures/models/: .gitignore  models.json
integration-tests/fixtures/models/gemma-4-e2b/: model_metadata.json
integration-tests/fixtures/models/lfm2-vl-450m/: model_metadata.json
integration-tests/fixtures/models/mobilenet/: model_metadata.json
integration-tests/tests/: llm_chat_template.rs
tools/: README.md
tools/scripts/: android-dlopen-gate.sh  android-dlopen-probe.c  build-android-bolt.sh  measure-binary-size.sh  (+5 more)
(+125 files in other folders)
