[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []

# Local LLM inference
llm-mistral = ["xybrid-core/llm-mistral"]              # mistral.rs (CPU)
llm-mistral-metal = ["xybrid-core/llm-mistral-metal"]  # mistral.rs + Metal (macOS)
llm-mistral-cuda = ["xybrid-core/llm-mistral-cuda"]    # mistral.rs + CUDA (NVIDIA)
llm-llamacpp = ["xybrid-core/llm-llamacpp"]            # llama.cpp (links native backend)

[dependencies]
xybrid-core = { path = "../crates/xybrid-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
dirs = "6.0"

[dev-dependencies]
