[package]
name = "xybrid-bolt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BoltFFI bindings (Swift / Kotlin / Java / C# / WASM / C) over the xybrid-ffi-facade — the single source for foreign-language SDKs"
publish = false

[lib]
# `lib` keeps the crate usable from regular Rust workflows (`cargo test`,
# downstream Rust callers). `staticlib` + `cdylib` produce the artifacts
# that `boltffi pack` consumes when emitting Swift / Kotlin / Java / C# /
# WASM / C bindings.
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
xybrid-ffi-facade = { path = "../xybrid-ffi-facade" }
xybrid-sdk = { path = "../xybrid-sdk", default-features = false }
# `default-features = false` drops the `uuid` / `url` newtypes BoltFFI
# wires in by default — we describe identifiers as plain `String` to
# stay consistent with the facade and the FRB/uniffi crates.
boltffi = { version = "0.25", default-features = false }

[features]
default = []

# PLATFORM PRESETS (forwarded from xybrid-sdk). Mirrors the convention
# every other binding crate uses; lets `cargo build -p xybrid-bolt
# --features platform-macos` link the right ORT / Candle / llama.cpp
# backends without per-target Cargo.toml additions.
platform-android = ["xybrid-sdk/platform-android"]
platform-ios = ["xybrid-sdk/platform-ios"]
platform-macos = ["xybrid-sdk/platform-macos"]
platform-desktop = ["xybrid-sdk/platform-desktop"]

# MEASUREMENT-ONLY. Forwards xybrid-sdk's vision backend so the native
# mtmd/vision size delta can be built through this crate (which, unlike
# xybrid-sdk, emits a real shippable staticlib/cdylib to size). Used by
# tools/scripts/measure-binary-size.sh. Deliberately NOT added to any
# platform-* preset, so NO shipped mobile artifact links the mtmd backend —
# it is reachable only via an explicit `--features platform-macos,llm-llamacpp-vision`
# build. Do not add this to a preset (see the binary-size measurement note).
# `xybrid-sdk/llm-llamacpp-vision` already pulls `llm-llamacpp` transitively.
llm-llamacpp-vision = ["xybrid-sdk/llm-llamacpp-vision"]
