[package]
name = "xybrid-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xybrid"
path = "src/main.rs"

[features]
default = ["vision"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)
# These are the atomic features that forward to xybrid-sdk

# ONNX Runtime Execution Providers
ort-download = ["xybrid-sdk/ort-download"]
ort-dynamic = ["xybrid-sdk/ort-dynamic"]
ort-coreml = ["xybrid-sdk/ort-coreml"]

# Candle (Pure Rust ML)
candle = ["xybrid-sdk/candle"]
candle-hub = ["xybrid-sdk/candle-hub"]
candle-metal = ["xybrid-sdk/candle-metal"]
candle-cuda = ["xybrid-sdk/candle-cuda"]

# HuggingFace direct loading
huggingface = ["xybrid-sdk/huggingface"]

# ONNX model inspection (for `xybrid init`)
onnx-inspect = ["xybrid-sdk/onnx-inspect"]

# Local LLM inference
llm-mistral = ["xybrid-sdk/llm-mistral"]
llm-mistral-metal = ["xybrid-sdk/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-sdk/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-sdk/llm-llamacpp"]
vision = ["xybrid-core/vision", "xybrid-sdk/vision"]
llm-llamacpp-vision = ["llm-llamacpp", "vision", "xybrid-sdk/llm-llamacpp-vision"]

# PLATFORM PRESETS (composed from individual features above)
# This ensures #[cfg(feature = "...")] checks work correctly in this crate.
platform-android = ["ort-dynamic", "llm-llamacpp", "candle", "huggingface"]
platform-ios = ["ort-download", "ort-coreml", "candle-metal", "candle-hub", "llm-llamacpp", "huggingface"]
platform-macos = ["ort-download", "ort-coreml", "candle-metal", "candle-hub", "llm-llamacpp", "huggingface"]
platform-desktop = ["ort-download", "llm-llamacpp", "huggingface"]


[dependencies]
xybrid-core = { path = "../xybrid-core", default-features = false }
xybrid-sdk = { path = "../xybrid-sdk", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
chrono = "0.4"
sha2 = "0.10"
colored = "2.1"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
hostname = "0.4"
# CLI UI
indicatif = "0.17"
console = "0.16"
dialoguer = "0.11"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-flame = "0.2"

[dev-dependencies]
image = "0.25"
