[package]
name = "xybrid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core runtime for hybrid cloud-edge AI inference: model execution, pipeline orchestration, and routing primitives."
readme = "README.md"
# Upstream llama backend source lives at workspace `vendor/llama-cpp/`
# (see `.gitmodules`), consumed by the `llama-cpp-sys` crate's build
# script. No tarball-exclude needed here — the source is not under this
# crate's manifest dir.

[lib]
name = "xybrid_core"
path = "src/lib.rs"

[dependencies]
# Raw FFI bindings + cmake build for llama.cpp. Gated entirely behind the
# `llm-llamacpp` feature (which activates both `llama-cpp-sys/bindings`
# and `xybrid-llama/bindings`) so default builds — and any consumer not
# opting into llama.cpp — pay zero compile cost. The 3-layer shape:
#   `llama-cpp-sys`  : raw FFI + cmake build (Phase 1)
#   `xybrid-llama`   : safe RAII + typed errors + streaming trampoline (Phase 2)
#   `xybrid-core`    : thin adapter glue (Phase 3 reduction)
llama-cpp-sys = { path = "../llama-cpp-sys", optional = true }
xybrid-llama = { path = "../xybrid-llama", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
bincode = "1.3"
# ureq is configured per-platform below for Android compatibility
# Android needs rustls with ring (aws-lc-rs uses getentropy unavailable on API 24)
url = "2.5"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
tempfile = "3.8"
log = "0.4"  # Standard logging facade
tracing = "0.1"  # Structured logging for streaming backend telemetry

# System information for device detection (v0.0.7)
sysinfo = "0.32"

# ONNX Runtime for model inference
# Note: Using ort crate for ONNX Runtime bindings
# For macOS/iOS: Uses CoreML/Metal backend (enable ort-coreml feature)
# For Android: Uses NNAPI backend (requires ort-dynamic + AAR)
# For desktop: Uses CPU backend
# Note: Using default-features = false for cross-platform compatibility.
# - For Android: Use ort-dynamic feature (loads .so at runtime)
# - For other platforms: Use ort-download feature to download prebuilt binaries
# - For CoreML acceleration: Use ort-coreml feature (macOS/iOS only)
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std"] }
ndarray = "0.17"  # Used by ort for tensor operations (must match ort's ndarray version)
base64 = "0.21"  # For BPE token decoding
mel_spec = "0.2"  # For mel spectrogram computation (audio preprocessing)
num-complex = "0.4"  # Required by mel_spec for Complex numbers
rustfft = "6.2"  # For custom Whisper-compatible FFT (Slaney mel scale)
image = "0.25"  # For image resizing and processing
# Disable default features to exclude esaxx_fast (esaxx-rs/cpp) which hardcodes
# static_crt(true) on MSVC, producing /MT objects that conflict with ORT's /MD.
# We only run tokenizer models, we don't train them — esaxx-rs is only for BPE training.
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
schemars = { version = "0.8", optional = true }  # JSON Schema generation for model_metadata.json
hound = "3.5"  # For WAV file reading (audio preprocessing)
cmudict-fast = "0.8"  # For CMU pronouncing dictionary (TTS phonemization)
lazy_static = "1.4"  # For static CMU dictionary initialization
unicode-normalization = "0.1"  # For NFC normalization of IPA phonemes

# Kokoro TTS dependencies (v0.0.10)
# Note: espeak-ng phonemization now uses system command (no library linking required)
ndarray-npy = "0.10"  # For loading voice embeddings from npz files (must match ndarray version)
regex = "1.10"  # For text normalization patterns

# Candle - Pure Rust ML framework (optional, for Whisper ASR)
# Enable with: cargo build --features candle
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
safetensors = { version = "0.4", optional = true }
hf-hub = { version = "0.3", optional = true }  # For downloading models from HuggingFace
byteorder = { version = "1.5", optional = true }  # For reading mel filter bytes
num-traits = { version = "0.2", optional = true }  # Required by candle audio

# Mistral.rs - Pure Rust LLM inference (optional, for local LLMs)
# DISABLED for the crates.io publish — `mistralrs` is currently a git dep
# upstream, which cargo publish rejects. To re-enable: switch to the
# crates.io release (mistralrs 0.8.1 or newer) and restore the
# `dep:mistralrs` wiring in the `llm-mistral*` features below.
# mistralrs = { version = "0.8", optional = true }

[features]
# `llm-llamacpp` is NOT enabled by default — it requires cmake + a C++
# toolchain and clones ~180MB of llama.cpp source during build. Downstream
# users opt in via `cargo add xybrid-core --features llm-llamacpp`
# or one of the `platform-*` presets on xybrid-sdk.
default = ["ort-download"]

# JSON Schema generation for model_metadata.json
schema = ["dep:schemars"]

# ONNX Runtime
ort-download = ["ort/download-binaries", "ort/tls-native"]  # Desktop/macOS/iOS: download prebuilt binaries
ort-dynamic = ["ort/load-dynamic"]                          # Android: load .so at runtime from AAR
ort-coreml = ["ort/coreml"]                                 # Apple Neural Engine acceleration

# Candle (Pure Rust ML)
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:safetensors", "dep:byteorder", "dep:num-traits"]
candle-hub = ["candle", "dep:hf-hub"]   # HuggingFace Hub download (requires OpenSSL — not for Android)

candle-metal = ["candle", "candle-core/metal", "candle-nn/metal"]
candle-cuda = ["candle", "candle-core/cuda"]

# Local LLM inference
# NOTE: marker features only — see the commented-out `mistralrs` dep above.
# Enabling these on the crates.io build will fail to compile because the
# `mistralrs` crate is not pulled in. Restore once we move to crates.io
# mistralrs 0.8.x.
llm-mistral = []
llm-mistral-metal = ["llm-mistral"]
llm-mistral-cuda = ["llm-mistral"]

# llama.cpp backend. Enabling `llm-llamacpp` links the llama.cpp runtime:
# it activates both `llama-cpp-sys/bindings` (cmake build of llama.cpp +
# wrapper.cpp shim) and `xybrid-llama/bindings` (safe RAII wrappers).
# All four `platform-*` presets on `xybrid-sdk` depend on it since they
# ship runtime inference. The 3-layer crate split underneath:
#   `llama-cpp-sys`  : raw FFI + cmake build (Phase 1)
#   `xybrid-llama`   : safe RAII + typed errors + streaming trampoline (Phase 2)
#   `xybrid-core`    : thin adapter glue (Phase 3 reduction)
llm-llamacpp = [
    "dep:llama-cpp-sys",
    "llama-cpp-sys/bindings",
    "dep:xybrid-llama",
    "xybrid-llama/bindings",
]

# dev-tools — exposes test seams (e.g. resource-snapshot providers) for
# downstream demos, integration tests, and benchmarks. Off by default.
# Crates that depend on `xybrid-core` enable this when they need to inject
# deterministic resource state without spinning up a real `ResourceMonitor`.
dev-tools = []

[build-dependencies]
# No build-time native dependencies in xybrid-core: the llama.cpp cmake
# build was relocated to `crates/llama-cpp-sys/build.rs` as Phase 1 of the
# `llamacpp-crate-split` epic, and `xybrid-core/build.rs` was removed.

[dev-dependencies]
tempfile = "3.8"
xybrid-sdk = { path = "../xybrid-sdk" }
dirs = "6.0"
filetime = "0.2"
hound = "3.5"  # WAV file reading for tests
walkdir = "2.4"  # For directory traversal in tests
ureq = { version = "2.8", default-features = false, features = ["json", "tls"] }  # For HTTP in tests
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking framework

[[example]]
name = "neutts_tts"
# Real inference — needs llama.cpp linked.
required-features = ["llm-llamacpp"]

[[bench]]
name = "inference_backends"
harness = false

[[bench]]
name = "resource_telemetry"
harness = false

[[bench]]
name = "routing_feedback"
harness = false

# Platform-specific ureq dependencies
# Non-Android: Use default ureq with TLS
[target.'cfg(not(target_os = "android"))'.dependencies]
ureq = { version = "2.8", default-features = false, features = ["json", "tls"] }

# Android: Use ureq with explicit rustls/ring (aws-lc-rs uses getentropy unavailable on API 24)
[target.'cfg(target_os = "android")'.dependencies]
ureq = { version = "2.8", default-features = false, features = ["json", "tls"] }
# Force rustls to use ring crypto backend instead of aws-lc-rs
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Apple thermal poller (macOS + iOS): NSProcessInfo.thermalState — same
# Foundation API on both, no entitlement, microsecond-class. The
# Foundation crates work cross-platform under the same target_os check
# clang's apple compilation matrix uses.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# objc2 + objc2-foundation pinned at 0.6 / 0.3 so the direct deps unify with
# the transitive 0.6/0.3 versions pulled by objc2-metal/-core-graphics/-core-ml.
# Mixing 0.5 + 0.6 in the same dep graph splits NSObjectProtocol/AnyObject
# types and breaks isKindOfClass-style checks across them.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
# Real Metal probe via MTLCreateSystemDefaultDevice.
objc2-metal = { version = "0.3", default-features = false, features = ["std", "MTLDevice"] }
# Sibling dep to satisfy the CoreGraphics framework link objc2-metal documents
# as a build requirement. 0.2 does not exist on crates.io — must be 0.3.
objc2-core-graphics = { version = "0.3", default-features = false, features = ["std"] }
# Real Apple Neural Engine probe via Core ML compute-device enumeration.
# Note: we deliberately do NOT enable the `MLAllComputeDevices` feature.
# That feature's generated wrapper emits a strong extern reference to the
# `MLAllComputeDevices` C symbol — which would re-introduce the bind-at-load
# risk on macOS 13 / iOS 16 that our libc::dlsym lookup in apple.rs avoids.
# We need only the type bindings here; the function itself is resolved at
# runtime via dlsym in detect_neural_engine_with_confidence.
objc2-core-ml = { version = "0.3", default-features = false, features = [
    "std",
    "MLComputeDeviceProtocol",
    "MLNeuralEngineComputeDevice",
] }
# libc for dlsym(RTLD_DEFAULT, ...) to resolve MLAllComputeDevices at runtime
# instead of through the objc2-core-ml generated wrapper.
libc = "0.2"

# macOS-only battery poller: IOKit IOPSCopyPowerSourcesInfo. The IOPS
# APIs are gated behind a private entitlement on iOS; the public
# UIDevice.batteryLevel path requires UIKit which doesn't belong in
# xybrid-core, so iOS hosts push battery via the UniFFI surface.
# A `pmset` shellout would fork+exec on every cache miss inside the
# orchestrator hot path; IOKit's IOPS APIs are documented thread-safe
# and avoid that.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-io-kit = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFNumber", "CFArray", "CFDictionary"] }

# Windows native platform-state pollers.
#
# Battery uses `windows-sys` for `GetSystemPowerStatus` — a single Win32
# syscall, no COM. Thermal needs WMI's `MSAcpi_ThermalZoneTemperature`,
# which means COM interface vtables (`IWbemLocator`, `IWbemServices`,
# `IEnumWbemClassObject`, `IWbemClassObject`) and `VARIANT` plumbing —
# none of which `windows-sys` exposes (it ships constants and free
# functions, not interfaces). The `windows` crate is the supported path
# for COM/WMI, so it joins `windows-sys` here scoped to the WMI feature
# set. Lazy-linked bindings keep the binary impact minimal.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power", "Win32_Foundation"] }
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Wmi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
