[package]
name = "xybrid-ffi-facade"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI-agnostic facade over xybrid-sdk (consumed by xybrid-bolt, xybrid-ffi, and the Flutter bindings)"
publish = false

[lib]
name = "xybrid_ffi_facade"
path = "src/lib.rs"

# No `cdylib` / `staticlib` here — this crate is consumed by other Rust
# crates, not loaded directly by foreign runtimes. The generator crates
# (`xybrid-bolt`, `xybrid-ffi`, `bindings/flutter/rust`) own the artifact
# emission.

[dependencies]
xybrid-sdk = { workspace = true }
xybrid-core = { path = "../xybrid-core", default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
