[package]
name = "xybrid-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Developer-facing API for hybrid cloud-edge AI inference: load/run/stream models with declarative routing."
readme = "README.md"

[lib]
name = "xybrid_sdk"
path = "src/lib.rs"

[dependencies]
xybrid-macros = { version = "0.1.0-rc3", path = "../../macros" }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "fs", "time"] }
tokio-stream = "0.1"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
dirs = "6.0"
sha2 = "0.10"
hf-hub = { version = "0.5", optional = true }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std"], optional = true }

# Platform-specific dependencies (NOT features - those are in presets)
# Android: rustls with ring backend (aws-lc-rs uses getentropy unavailable on API 24)
[target.'cfg(target_os = "android")'.dependencies]
xybrid-core = { version = "0.1.0-rc3", path = "../xybrid-core", default-features = false, features = ["ort-dynamic"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
xybrid-core = { version = "0.1.0-rc3", path = "../xybrid-core", default-features = false, features = ["ort-download"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }

[features]
default = []

# Development/test convenience: lets SdkCacheProvider fall back to the
# workspace's integration-test model fixtures. Off by default so shipped SDKs
# never reference `xybrid_core::testing`. Forwards to `xybrid-core/test-util`
# so the gate stays consistent if core later moves `testing` behind it.
test-util = ["xybrid-core/test-util"]

# HuggingFace Hub integration (download models directly from HF repos)
huggingface = ["dep:hf-hub"]

# ONNX model inspection (loads ONNX files via ort to extract tensor metadata)
onnx-inspect = ["dep:ort", "ort/download-binaries", "ort/tls-native"]

# PLATFORM PRESETS (SINGLE SOURCE OF TRUTH)

# Android: Dynamic ORT loading + Candle + llama.cpp (mistral.rs has SIGILL issues on ARM)
platform-android = ["xybrid-core/ort-dynamic", "xybrid-core/candle", "llm-llamacpp"]

# iOS: CoreML + Metal acceleration + llama.cpp
platform-ios = ["xybrid-core/ort-download", "xybrid-core/ort-coreml", "xybrid-core/candle-metal", "xybrid-core/candle-hub", "llm-llamacpp"]

# macOS: CoreML + Metal + llama.cpp
platform-macos = ["xybrid-core/ort-download", "xybrid-core/ort-coreml", "xybrid-core/candle-metal", "xybrid-core/candle-hub", "llm-llamacpp"]

# Desktop (Linux/Windows): CPU with llama.cpp
platform-desktop = ["xybrid-core/ort-download", "llm-llamacpp"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)

# ONNX Runtime Execution Providers
ort-download = ["xybrid-core/ort-download"]
ort-dynamic = ["xybrid-core/ort-dynamic"]
ort-coreml = ["xybrid-core/ort-coreml"]

# Candle (Pure Rust ML)
candle = ["xybrid-core/candle"]
candle-hub = ["xybrid-core/candle-hub"]
candle-metal = ["xybrid-core/candle-metal"]
candle-cuda = ["xybrid-core/candle-cuda"]

# Local LLM inference
llm-mistral = ["xybrid-core/llm-mistral"]
llm-mistral-metal = ["xybrid-core/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-core/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-core/llm-llamacpp"]
llm-llamacpp-vision = ["llm-llamacpp", "vision", "xybrid-core/llm-llamacpp-vision"]

# Dev-tools (test seams for demos and integration tests)
dev-tools = ["xybrid-core/dev-tools"]

# Vision envelope primitives.
vision = ["xybrid-core/vision"]

[dev-dependencies]
httpmock = "0.7"

# Re-export the macro
[package.metadata.docs.rs]
all-features = true

# Demo: stress-driven local→cloud fallback. The user must also pass a
# platform preset (e.g. `--features platform-macos`) so ORT and LLM
# backends are linked. Requires a cached `qwen2.5-0.5b` and a reachable
# cloud target (mock at http://localhost:3000 or a real provider).
[[example]]
name = "cloud_fallback_demo"
path = "examples/cloud_fallback_demo.rs"
# Real inference path — needs llama.cpp linked.
required-features = ["llm-llamacpp", "dev-tools"]

[[test]]
name = "cloud_fallback_e2e"
path = "tests/cloud_fallback_e2e.rs"
required-features = ["dev-tools"]
