[package]
name = "xybrid-uniffi"
version.workspace = true
edition.workspace = true
description = "UniFFI bindings for xybrid-sdk (Swift/Kotlin)"

[lib]
name = "xybrid_uniffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.25", features = ["cli", "tokio"] }
thiserror = "1"
serde_json = "1.0"
# tokio = { version = "1", features = ["rt-multi-thread"] }
xybrid-sdk = { path = "../xybrid-sdk", default-features = false }

[dev-dependencies]
image = "0.25"

[features]
default = ["vision"]

# PLATFORM PRESETS (forwarded from xybrid-sdk)
platform-android = ["xybrid-sdk/platform-android", "vision"]
platform-ios = ["xybrid-sdk/platform-ios", "vision"]
platform-macos = ["xybrid-sdk/platform-macos", "vision"]
platform-desktop = ["xybrid-sdk/platform-desktop", "vision"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)
ort-download = ["xybrid-sdk/ort-download"]
ort-dynamic = ["xybrid-sdk/ort-dynamic"]
ort-coreml = ["xybrid-sdk/ort-coreml"]
candle = ["xybrid-sdk/candle"]
candle-hub = ["xybrid-sdk/candle-hub"]
candle-metal = ["xybrid-sdk/candle-metal"]
candle-cuda = ["xybrid-sdk/candle-cuda"]
llm-mistral = ["xybrid-sdk/llm-mistral"]
llm-mistral-metal = ["xybrid-sdk/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-sdk/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-sdk/llm-llamacpp"]
llm-llamacpp-vision = ["vision", "llm-llamacpp", "xybrid-sdk/llm-llamacpp-vision"]
huggingface = ["xybrid-sdk/huggingface"]
vision = ["xybrid-sdk/vision"]
